# multi-language-bazel

./: .gitignore  README.md  WORKSPACE.bazel
.github/workflows/: main.yml
projects/calculator/: BUILD.bazel  calculator_test.py
projects/go_hello_world/: BUILD.bazel  hello_world_test.go
projects/go_web/: BUILD.bazel  main.go
projects/my-python-app/: BUILD.bazel  main.py
projects/python_calculator/: BUILD.bazel  calculator.py  calculator_test.py
projects/python_web/: BUILD.bazel  main.py
